# mini-games-cpp

./: .gitignore  README.md
arkanoid/: CMakeLists.txt  README.txt  main.cpp
arkanoid/data/: pattern1.txt  pattern2.txt  pattern3.txt  patternI.txt
arkanoid/include/: Common.hpp  Error.hpp  ErrorFile.hpp  Game.hpp  GameMenu.hpp  GameSettings.hpp  GameState.hpp  Level.hpp  LevelCurrent.hpp  TestCollision.hpp
arkanoid/include/items/: Ball.hpp  Brick.hpp  Paddle.hpp
arkanoid/src/: Game.cpp  GameMenu.cpp  GameSettings.cpp  Level.cpp  LevelCurrent.cpp
snake/: Board.hpp  CMakeLists.txt  Common.hpp  Game.hpp  Snake.hpp  main.cpp
